--- a/modules/commission_insurance_prepayment/locale/fr.po
+++ b/modules/commission_insurance_prepayment/locale/fr.po
@@ -10,6 +10,10 @@ msgctxt "error:commission:"
 msgid "Prepayment Amortization"
 msgstr "Amortissement du précompte"
 
+msgctxt "error:commission:"
+msgid "Redeemed prepayment: %(redeemed_amount)s\n"
+msgstr "Précompte amorti: %(redeemed_amount)s\n"
+
 msgctxt "error:contract.option:"
 msgid "An option must have either a contract or a covered element"
 msgstr "Une option doit avoir un contrat ou un élément couvert"
@@ -29,6 +33,16 @@ msgstr "Précompte"
 msgctxt "field:commission,redeemed_prepayment:"
 msgid "Redeemed Prepayment"
 msgstr "Amortissement du précompte"
+
+msgctxt ""
+"field:commission.description.configuration,prepayment_adjustment_commission_title:"
+msgid "Prepayment Adjustment Commission Title"
+msgstr "Titre des commissions d'ajustement du précompte"
+
+msgctxt ""
+"field:commission.description.configuration,prepayment_commission_title:"
+msgid "Prepayment Commission Title"
+msgstr "Titre des commissions de précompte"
 
 msgctxt "field:commission.plan,adjust_prepayment:"
 msgid "Adjust Prepayment"
@@ -239,6 +253,22 @@ msgctxt "field:prepayment.sync.show_result,non_adjusted:"
 msgid "Non Adjusted"
 msgstr "Non ajusté"
 
+msgctxt ""
+"help:commission.description.configuration,prepayment_adjustment_commission_title:"
+msgid ""
+"Contains the string which will be used to introduce prepayment "
+"adjustmentcommissions calculation details"
+msgstr ""
+"Contient l'introduction au détail des commissions d'ajustement du précompte"
+
+msgctxt ""
+"help:commission.description.configuration,prepayment_commission_title:"
+msgid ""
+"Contains the string which will  be used to introduce prepayment commissions "
+"calculation details"
+msgstr ""
+"Contient l'introduction au détail du calcul des commissions de précompte"
+
 msgctxt "help:commission.plan,delete_unpaid_prepayment:"
 msgid ""
 "Redeemed of unpaid invoices will be deleted once contracts are terminated"
@@ -270,19 +300,22 @@ msgctxt "model:extra_details.configuration.line,string:commission_adjustment"
 msgid "Is adjustment"
 msgstr "Est un ajustement"
 
-msgctxt ""
-"model:extra_details.configuration.line,string:commission_monthly_premium_excl_tax"
-msgid "Monthly premium excluding tax"
-msgstr "Prime mensuelle HT"
-
-msgctxt ""
-"model:extra_details.configuration.line,string:commission_monthly_premium_incl_tax"
-msgid "Monthly premium including tax"
-msgstr "Prime mensuelle TTC"
+msgctxt "model:extra_details.configuration.line,string:commission_percentage"
+msgid "Percentage"
+msgstr "Pourcentage"
 
 msgctxt "model:extra_details.configuration.line,string:commission_premium"
 msgid "First year premium"
 msgstr "Prime de la première année"
+
+msgctxt ""
+"model:extra_details.configuration.line,string:commission_prepayment_amount"
+msgid "Prepayment Amount"
+msgstr "Montant du précompte"
+
+msgctxt "model:extra_details.configuration.line,string:commission_rate"
+msgid "Duration Factor"
+msgstr "Facteur durée"
 
 msgctxt ""
 "model:extra_details.configuration.line,string:commission_sum_prepayments"
