--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11107 Fix the initial loss date used in case of relapse or long term disability
 * BUG#11021 Fix multiple covered found error message
 * BUG#10908 Check covered period dates in get_theoretical_covered_element
 * BUG#10739 Do not initialize a relapse with initial loss data if there is no such data
