--- a/modules/contract_distribution/doc/en/CHANGELOG
+++ b/modules/contract_distribution/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11119 Parent commercial product display incorrect products
+
 Version 2.2 - 2018-10-12
 * BUG#10126 Add migration for dist_network field
 * FEA#8932 Add the user's network distributors available in context
