--- a/modules/contract_distribution/doc/fr/CHANGELOG
+++ b/modules/contract_distribution/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11119 Le champs produits comerciaux des réseaux parents affichent de mauvais produit commerciaux
+
 Version 2.2 - 2018-10-12
 * BUG#10126 Ajout de migration pour le champ dist_network
 * FEA#8932 La liste des distributeurs du réseau de l'utilisateur est disponible dans le contexte
