--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11154 Fix Quote Number Sequence property migration
 * FEA#8622 identify parties to anonymize after contract termination
 * BUG#10975 Remove termination reason when reactivating a hold contract
 * BUG#10956 Add overlap check on coverages
