--- a/modules/contract_underwriting/doc/en/CHANGELOG
+++ b/modules/contract_underwriting/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11143 Remove underwriting extra data from contracts / options
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#7615 Expose an RPC call to calculate underwriting
