--- a/modules/contract_underwriting/doc/fr/CHANGELOG
+++ b/modules/contract_underwriting/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11143 Filtrer les données complémentaires de type "analyse de risques" sur les contrats / garanties souscrites
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#8687 Afficher le risque couvert lors de l'analayse des risques des garanties
