--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11091 Ajout d'un check de cohérence entre le statut d'un contrat mis en effet et les statuts des options de ses élements couverts
 * FEA#10897 Vérification des chevauchements sur les dates des éléments couverts ne niveau 0 pour empêcher les doublons
 * BUG#10618 La liste des tiers d'un contract ne doit contenir qu'une seule fois un même tiers.
 * BUG#10418 La contrainte d'unicité sur les tiers des éléments couverts par contrat bloque certains cas métier
