--- a/modules/commission_insurance_prepayment/doc/fr/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11171 Eviter le problème des années bisextiles lors des calculs de précomptes
 * BUG#10923 Modifier la méthode qui retourne les informations des précomptes impayés pour ajouter la somme des précomptes et des amortissements
 * OTH#00000 Adapter la clé de tri des lignes de quittance à python 3
 * FEA#10905 Ajout de la chaine de synchronisation du précompte à la chaine de batch quotidienne
