--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix default value for deductible rules
 * FEA#10498 Add only revaluation computation for the in complement contracts
 * BUG#10733 Fix automatically selected benefit "Subsidiaries then covered" which is inverted
 * BUG#10634 Fix readonly states of contract benefit options
