contract_insurance_invoice: fix incoherence between the start date of… (#2648)
* contract_insurance_invoice: fix incoherence between the start date of activated contract and the start date of its start date of its invoices

--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10985 Correction de l'inconsistance entre la date effective d'un contrat actif et la date effective de ses quittances
 * BUG#9867 Ajout d'un message d'erreur si aucune adresse n'est trouvée lors de la finalisation de quittances
 * OTH#00000 Correction d'un plantage lors de la vérification des quittances précédemment postées
 * OTH#00000 Mise à jour de intervaltree en version 3.0
