--- a/modules/claim/doc/fr/CHANGELOG
+++ b/modules/claim/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11188 Ajout de mon historique au menu sinistres
 * BUG#11037 Modification de la valeur du type des données complémentaires qui sont attachées au service délivré afin qu'ils soient cnconcordnace avec le type définit sur la donnée complémantaire
 * FEA#10840 Extraction des données liées aux sinistres pour la RGPD
 * BUG#10811 Permettre au profil de droit gestion sinistre de supprimer les données complémentaires sur un sinistre
