--- a/modules/dsn_standard/doc/fr/CHANGELOG
+++ b/modules/dsn_standard/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11270 Limiter la longueur du champ libellé de la voie
 * BUG#10714 Le champ de la localité doit être normalisé en ascii alphanumérique uniquement
 * OTH#0000 Correction d'anomalies suite à des tests sur le portail NetEntreprise
 * Création du module
