--- a/modules/contract_group/locale/fr.po
+++ b/modules/contract_group/locale/fr.po
@@ -42,6 +42,10 @@ msgctxt "field:contract,is_group:"
 msgid "Group Contract"
 msgstr "Contrat Collectif"
 
+msgctxt "field:contract.covered_element,active:"
+msgid "Active"
+msgstr "Active"
+
 msgctxt "field:contract.covered_element,contract_exit_date:"
 msgid "Contract Exit Date"
 msgstr "Date de sortie du contrat"
@@ -1434,3 +1438,7 @@ msgctxt ""
 "wizard_button:contract.transfer_covered_elements,select_contracts,item_descs:"
 msgid "Check Item Descs"
 msgstr "Vérifier les risques"
+
+msgctxt "view:contract.covered_element:"
+msgid "Cancel Enrollment"
+msgstr "Annuler l'affiliation"
